[project]
name = "ray-decorator"
version = "0.1.4"
description = "Decorator to run functions on Ray cluster with S3 mapping between local and remote workers paths"
readme = "README.md"
authors = [
    { name = "Steven Bucaille", email = "steven.bucaille@osedea.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
