[project]
name = "ray-decorator"
version = "0.1.6"
description = "Decorator to run functions on Ray cluster with S3 mapping between local and remote workers paths"
readme = "README.md"
authors = [
    { name = "Steven Bucaille", email = "steven.bucaille@osedea.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "accelerate>=1.12.0",
    "hydra-zen>=0.16.0",
    "ray[client]>=2.54.0",
    "ruff>=0.11.13",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable these rule sets
select = [
    "I",    # isort (import sorting)
]

# Use ignore for specific rules that are too pedantic or clash with formatters
ignore = [
    "E501", # Line too long (usually handled by the formatter)
]
